package com.prueba.notificacion.notificacion.exception;

public class CanalInactivoException extends RuntimeException {

    public CanalInactivoException(String message) {
        super(message);
    }

}
