package com.prueba.notificacion.notificacion.exception;

public class CanalNoSoportadoException extends RuntimeException {

    public CanalNoSoportadoException(String message) {
        super(message);
    }
}
