package com.prueba.notificacion.notificacion.exception;

public class ValidacionException extends RuntimeException {

    public ValidacionException(String message) {
        super(message);
    }
}
